--- a/DsK.DAL/DsK.DAL.csproj
+++ b/DsK.DAL/DsK.DAL.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DsK.Application\DsK.Application.csproj" />
+  </ItemGroup>
+
 </Project>
