--- a/DsK.WebAPICRUDExample.Server/DsK.WebAPICRUDExample.Server.csproj
+++ b/DsK.WebAPICRUDExample.Server/DsK.WebAPICRUDExample.Server.csproj
@@ -7,8 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DsK.Application\DsK.Application.csproj" />
+    <ProjectReference Include="..\DsK.DAL\DsK.DAL.csproj" />
   </ItemGroup>
 
 </Project>
